--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "bootstrap": "^5.3.3",
+    "embla-carousel": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
