--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "lucide-react": "^0.370.0",
     "next": "14.1.3",
     "react": "^18.2.0",
+    "react-chrono": "^2.6.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
@@ -40,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
